[package]
name = "tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum-extra = { version = "0.9", default-features = false, features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.20.0"
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry-http = "0.9.0"
http = "0.2"
